# bzip2pb

./: CHANGELOG.md  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  vcpkg.json
.github/workflows/: ci.yml  conda.yml
benchmarks/: bench.cpp  bench.h
conda/: bld.bat  build.sh  meta.yaml
docs/: ARCHITECTURE.md  BENCHMARKS.md  DEVELOPMENT_PLAN.md  FORMAT.md
docs/agent-handoff/: current.md  step-01-complete.md  step-02-complete.md  step-03-complete.md  step-04-complete.md  step-05-complete.md  step-06-complete.md  step-07-complete.md  step-08-complete.md  step-09-complete.md  step-10-complete.md  step-11-complete.md
src/: bitscanner.cpp  bitscanner.h  bitstream.cpp  bitstream.h  cli.cpp  cli.h  common.h  compress.cpp  compress.h  decompress.cpp  decompress.h  main.cpp  thread_pool.cpp  thread_pool.h  version.h.in
tests/: testdata.h
tests/integration/: test_compatibility.cpp  test_edge_cases.cpp  test_roundtrip.cpp
tests/unit/: test_bitscanner.cpp  test_cli.cpp  test_compress.cpp  test_decompress.cpp
